# share-class

./: .gitignore  app.vue  auto-imports.d.ts  components.d.ts  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
assets/css/: main.css
components/: content-with-sider.vue  draw-student-id.vue
layouts/: default.vue
pages/: about.vue  index.vue  manage.vue
src-tauri/: Cargo.toml  tauri.conf.json
stores/: class.ts
